@@ -657,3 +657,4 @@
 
 	* examples/nsh:  A debug option was left on that can (and does) cause
 	  infinite loops and stack overflows.
+	* net/uip: Correct calculation of checksum on ICMP ping response.
